syntax = "proto3";

package org.project_planton.provider.gcp.gcpgcsbucket.v1;

import "org/project-planton/provider/gcp/gcpgcsbucket/v1/api.proto";
import "org/project-planton/provider/gcp/provider.proto";

//gcp-gcs-bucket stack-input
message GcpGcsBucketStackInput {
  //target cloud-resource
  GcpGcsBucket target = 1;
  //provider-config
  org.project_planton.provider.gcp.GcpProviderConfig provider_config = 2;
}
