syntax = "proto3";

package org.project_planton.provider.gcp.gcpgcsbucket.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/gcp/gcpgcsbucket/v1/spec.proto";
import "org/project_planton/provider/gcp/gcpgcsbucket/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

//gcp-gcs-bucket
message GcpGcsBucket {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'gcp.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'GcpGcsBucket'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  GcpGcsBucketSpec spec = 4 [(buf.validate.field).required = true];

  //status
  GcpGcsBucketStatus status = 5;
}

//gcp-gcs-bucket status
message GcpGcsBucketStatus {
  //stack-outputs
  GcpGcsBucketStackOutputs outputs = 1;
}
